--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,6 +104,11 @@
   }
 }
 
+html {
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
 body {
   display: none;
   margin: 0;
@@ -112,6 +117,7 @@ body {
   font-family: var(--body-font-family);
   font-size: var(--body-font-size-m);
   line-height: 1.6;
+  overflow-x: hidden;
 }
 
 body.appear {
@@ -120,6 +126,8 @@ body.appear {
 
 header {
   height: var(--nav-height);
+  position: relative;
+  z-index: 2;
 }
 
 header .header,
@@ -174,6 +182,11 @@ pre {
   background-color: var(--light-color);
   overflow-x: auto;
   white-space: pre;
+}
+
+main {
+  position: relative;
+  z-index: 1;
 }
 
 main > div {
@@ -282,7 +295,7 @@ main > .section:first-of-type {
   margin-top: 0;
 }
 
-@media (width >= 900px) {
+@media (min-width: 900px) {
   main > .section > div {
     padding: 0 32px;
   }
@@ -344,7 +357,7 @@ main .section .layout-wrapper {
         color: var(--link-hover-color) !important;
       }
       &:before {
-        background-color: var(--link-hover-color) !important;;
+        background-color: var(--link-hover-color) !important;
       }
     }
     details summary::-webkit-details-marker {
@@ -557,16 +570,16 @@ main .section {
     padding: 64px 32px 32px 32px;
   }
 }
-@media (width >=900px) {
+@media (min-width: 900px) {
   .section > div {
-    max-width: 1200px;
+    max-width: 1440px;
     margin: auto;
   }
   .section.content-wide > div {
     max-width: 1400px;
     margin: auto;
   }
-
+}
 /* Column layouts */
 div.columns-50-50 {
   .layout-wrapper {
